--- a/index.html
+++ b/index.html
@@ -1,32 +1,139 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href='css/bootstrap.min.css'>
-    <link rel="stylesheet" href='css/styles.css'>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <script type='text/javascript' src='js/bootstrap.min.js'></script>
-    <script type='text/javascript' src='js/scripts.js'></script>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="js/scripts.js" type="text/javascript"></script>
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Vacation Destination</title>
+
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css" media="screen" title="no title" charset="utf-8">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
   </head>
   <body>
     <div class='container text-center'>
       <div class='row'>
         <div class='col-md-12'>
-          <h1>Vacation Questionaire</h1>
-          <h2>Answer the questions to get a suggestion of where your next vacation should be:</h2>
-          <h3 id='questionArea'>
-            Would you like to go somewhere warm or tropical?
-          </h3><br>
-          <button class='btn btn-primary' id='yesButton'>YES</button>
-          <button class='btn btn-danger' id='noButton'>NO</button>
-          <br>
-          <h4 id='vacation'></h4>
-          <br>
-          <br>
-          <button class='btn btn-default' id='resetButton'>Reset</button>
+          <form>
+            <h1>Vacation Questionaire</h1>
+            <h2>Answer the questions to get a suggestion of where your next vacation should be:</h2>
+            <!-- temp radio -->
+            <h3>Would you like to go somewhere warm or tropical?</h3>
+            <div class="radio">
+              <label>
+                <input type="radio" name="optionsRadios" value="yes" checked>
+                Yes
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="optionsRadios" value="cold">
+                No
+              </label>
+            </div>
+            <!-- tourist radio -->
+            <h3>Would you like to go somewhere touristy?</h3>
+            <div class="radio">
+              <label>
+                <input type="radio" name="optionsRadios2" value="yes" checked>
+                Yes
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="optionsRadios2" value="no">
+                No
+              </label>
+            </div>
+            <!-- affordable radio -->
+            <h3>Would you like your vacation to be affordable?</h3>
+            <div class="radio">
+              <label>
+                <input type="radio" name="optionsRadios3" value="yes" checked>
+                Yes
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="optionsRadios3" value="expensive">
+                No
+              </label>
+            </div>
+            <!-- fly radio -->
+            <h3>Would you like to fly to your destination?</h3>
+            <div class="radio">
+              <label>
+                <input type="radio" name="optionsRadios4" value="yes" checked>
+                Yes
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="optionsRadios4" value="car">
+                No
+              </label>
+            </div>
+            <!-- usa radio -->
+            <h3>Would you like to remain in the USA?</h3>
+            <div class="radio">
+              <label>
+                <input type="radio" name="optionsRadios5" id="optionsRadios1" value="yes" checked>
+                Yes
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="optionsRadios5" id="optionsRadios2" value="mexico">
+                No
+              </label>
+            </div>
+            <br>
+            <button type="submit" class="btn btn-primary" data-toggle="modal" id="submit" data-target="#myModal">Submit</button>
+            <button class='btn btn-warning' id='resetButton'>Reset</button>
+          </form>
         </div>
       </div>
     </div>
+        <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">You should go to:</h4>
+          </div>
+          <div class="modal-body">
+            <div class="daytona">
+              <h3>Daytona Beach Florida</h3>
+            </div>
+            <div class="cabo">
+              <h3>Cabo San Lucas Mexico</h3>
+            </div>
+            <div class="sanDiego">
+              <h3>San Diego California</h3>
+            </div>
+            <div class="baja">
+              <h3>Baja Mexico</h3>
+            </div>
+
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
