add a README.md, completed scripts.js logic and everything is working.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="optionsRadios" value="cold">
+                <input type="radio" name="optionsRadios" value="no">
                 No
               </label>
             </div>
@@ -66,7 +66,7 @@
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="optionsRadios3" value="expensive">
+                <input type="radio" name="optionsRadios3" value="no">
                 No
               </label>
             </div>
@@ -80,7 +80,7 @@
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="optionsRadios4" value="car">
+                <input type="radio" name="optionsRadios4" value="no">
                 No
               </label>
             </div>
@@ -115,18 +115,38 @@
           </div>
           <div class="modal-body">
             <div class="daytona">
-              <h3>Daytona Beach Florida</h3>
+              <h3>Daytona Beach, Florida</h3>
             </div>
             <div class="cabo">
-              <h3>Cabo San Lucas Mexico</h3>
+              <h3>Cabo San Lucas, Mexico</h3>
             </div>
             <div class="sanDiego">
-              <h3>San Diego California</h3>
+              <h3>San Diego, California</h3>
             </div>
             <div class="baja">
-              <h3>Baja Mexico</h3>
+              <h3>Baja, Mexico</h3>
             </div>
-
+            <div class="miami">
+              <h3>Miami, Florida</h3>
+            </div>
+            <div class="fiji">
+              <h3>Fiji</h3>
+            </div>
+            <div class="tulum">
+              <h3>Tulum, Mexico</h3>
+            </div>
+            <div class="manzanillo">
+              <h3>Manzanillo, Mexico</h3>
+            </div>
+            <div class="rarotonga">
+              <h3>Rarotonga, Cook Islands</h3>
+            </div>
+            <div class="palm">
+              <h3>Palm Springs, California</h3>
+            </div>
+            <div class="crazy">
+              <h3>You're crazy, go somewhere tropical!</h3>
+            </div>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
