add carousel and images. Stylize the page.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,102 @@
     <![endif]-->
   </head>
   <body>
+    <div id="myCarousel" class="carousel slide jumbotron">
+      <div class="container">
+        <ol class="carousel-indicators">
+          <li class="active" data-target="#myCarousel" data-slide-to="0"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+          <li data-target="#myCarousel" data-slide-to="3"></li>
+          <li data-target="#myCarousel" data-slide-to="4"></li>
+          <li data-target="#myCarousel" data-slide-to="5"></li>
+          <li data-target="#myCarousel" data-slide-to="6"></li>
+          <li data-target="#myCarousel" data-slide-to="7"></li>
+          <li data-target="#myCarousel" data-slide-to="8"></li>
+          <li data-target="#myCarousel" data-slide-to="9"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="item active btn-center">
+            <h1>Fiji</h1>
+            <img class="lead img-size" src=images/fiji.jpg>
+            </p>
+            <p class="btn-group">
+              <a class="btn btn-primary btn-lg" href="http://www.fiji.travel/" target="_blank">Fiji's Tourism Site</a>
+            </p>
+          </div>
+          <div class="item btn-center">
+            <h1>Baja, Mexico</h1>
+              <img class="lead img-size" src=images/baja.jpg>
+              <p>
+                <a class="btn btn-primary btn-lg" href="http://www.lonelyplanet.com/mexico/baja-california" target="_blank">Baja Tourism Site</a>
+              </p>
+          </div>
+          <div class="item btn-center">
+            <h1>Cabo San Lucas, Mexico</h1>
+              <img class="lead img-size" src="images/cabo.jpg">
+              <p>
+                <a class="btn btn-primary btn-lg" href="http://www.loscabos-tourism.com/cabo/" target="_blank">Cabo Tourism Site</a>
+              </p>
+          </div>
+          <div class="item btn-center">
+            <h1>Daytona Beach, Florida</h1>
+            <img class="lead img-size" src="images/daytona.jpg" alt="A photo of Daytona beach" />
+            <p>
+              <a class="btn btn-primary btn-lg" href="http://www.daytonabeach.com/" target="_blank">Daytona's Tourism Site</a>
+            </p>
+          </div>
+          <div class="item btn-center">
+            <h1>Manzanillo, Mexico</h1>
+              <img class="lead img-size" src=images/manzanillo.jpg>
+              <p>
+                <a class="btn btn-primary btn-lg" href="http://www.gomanzanillo.com/oldindex.htm" target="_blank">Manzanillo Tourism Site</a>
+              </p>
+          </div>
+          <div class="item btn-center">
+            <h1>Miami, Florida</h1>
+              <img class="lead img-size" src="images/miami.jpg">
+              <p>
+                <a class="btn btn-primary btn-lg" href="http://www.miamiandbeaches.com/" target="_blank">Miami Tourism Site</a>
+              </p>
+          </div>
+          <div class="item btn-center">
+            <h1>Daytona Beach, Florida</h1>
+            <img class="lead img-size" src="images/daytona.jpg" alt="A photo of Daytona beach" />
+            <p>
+              <a class="btn btn-primary btn-lg" href="http://www.daytonabeach.com/" target="_blank">Daytona's Tourism Site</a>
+            </p>
+          </div>
+          <div class="item btn-center">
+            <h1>Bja, Mexico</h1>
+              <img class="lead img-size" src=images/baja.jpg>
+              <p>
+                <a class="btn btn-primary btn-lg" href="http://www.lonelyplanet.com/mexico/baja-california" target="_blank">Baja Tourism Site</a>
+              </p>
+          </div>
+          <div class="item btn-center">
+            <h1>Cabo San Lucas, Mexico</h1>
+              <img class="lead img-size" src="images/cabo.jpg">
+              <p>
+                <a class="btn btn-primary btn-lg" href="http://www.loscabos-tourism.com/cabo/" target="_blank">Cabo Tourism Site</a>
+              </p>
+          </div>
+          <div class="item btn-center">
+            <h1>Daytona Beach, Florida</h1>
+            <img class="lead img-size" src="images/daytona.jpg" alt="A photo of Daytona beach" />
+            <p>
+              <a class="btn btn-primary btn-lg" href="http://www.daytonabeach.com/" target="_blank">Daytona's Tourism Site</a>
+            </p>
+          </div>
+        </div>
+      </div>
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+        <span class="icon-prev"></span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next">
+        <span class="icon-next"></span>
+      </a>
+    </div>
+
     <div class='container text-center'>
       <div class='row'>
         <div class='col-md-12'>
@@ -116,36 +212,47 @@
           <div class="modal-body">
             <div class="daytona">
               <h3>Daytona Beach, Florida</h3>
+              <img src="images/daytona.jpg" alt="A pic of a Daytona Beach, Florida" />
             </div>
             <div class="cabo">
               <h3>Cabo San Lucas, Mexico</h3>
+              <img src="images/cabo.jpg" alt="A pic of a Cabo San Lucas Mexico" />
             </div>
             <div class="sanDiego">
               <h3>San Diego, California</h3>
+              <img src="images/sanDiego.jpg" alt="A pic of a San Diego" />
             </div>
             <div class="baja">
               <h3>Baja, Mexico</h3>
+              <img src="images/baja.jpg" alt="A pic of a Baja Mexico" />
             </div>
             <div class="miami">
               <h3>Miami, Florida</h3>
+              <img src="images/miami.jpg" alt="A pic of a Miami" />
             </div>
             <div class="fiji">
               <h3>Fiji</h3>
+              <img src="images/fiji.jpg" alt="A pic of a Fiji" />
             </div>
             <div class="tulum">
               <h3>Tulum, Mexico</h3>
+              <img src="images/tulum.jpg" alt="A pic of a Tulum Mexico" />
             </div>
             <div class="manzanillo">
               <h3>Manzanillo, Mexico</h3>
+              <img src="images/manzanillo.jpg" alt="A pic of a Manzanillo" />
             </div>
             <div class="rarotonga">
               <h3>Rarotonga, Cook Islands</h3>
+              <img src="images/rarotonga.jpg" alt="A pic of a Rarotonga" />
             </div>
             <div class="palm">
               <h3>Palm Springs, California</h3>
+              <img src="images/palm.jpg" alt="A pic of a Palm Springs" />
             </div>
             <div class="crazy">
               <h3>You're crazy, go somewhere tropical!</h3>
+              <img src="images/crazy.jpg" alt="A pic of a person surrounded by glaciers" />
             </div>
           </div>
           <div class="modal-footer">
@@ -154,6 +261,10 @@
         </div>
       </div>
     </div>
+    <footer class="bottom">
+      <p>&copy; Daren Schaad/Epicodus all rights reserved</p>
+      <p>Contact information: darenschaad@gmail.com</p>
+    </footer>
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
