add links to modal pop up and carousel. add images to carousel. further stylized page with margins and borders

--- a/index.html
+++ b/index.html
@@ -4,24 +4,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="js/scripts.js" type="text/javascript"></script>
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Vacation Destination</title>
-
-    <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css" media="screen" title="no title" charset="utf-8">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
   <body>
+    <div class="top">
+      <h1>Where should you go for your next vacation???</h1>
+    </div>
     <div id="myCarousel" class="carousel slide jumbotron">
       <div class="container">
         <ol class="carousel-indicators">
@@ -39,7 +31,7 @@
         <div class="carousel-inner">
           <div class="item active btn-center">
             <h1>Fiji</h1>
-            <img class="lead img-size" src=images/fiji.jpg>
+            <img class="lead img-size" src=images/fiji.jpg alt="A photo of Fiji">
             </p>
             <p class="btn-group">
               <a class="btn btn-primary btn-lg" href="http://www.fiji.travel/" target="_blank">Fiji's Tourism Site</a>
@@ -47,65 +39,65 @@
           </div>
           <div class="item btn-center">
             <h1>Baja, Mexico</h1>
-              <img class="lead img-size" src=images/baja.jpg>
+              <img class="lead img-size" src=images/baja.jpg alt="A photo of Baja, Mexico">
               <p>
                 <a class="btn btn-primary btn-lg" href="http://www.lonelyplanet.com/mexico/baja-california" target="_blank">Baja Tourism Site</a>
               </p>
           </div>
           <div class="item btn-center">
             <h1>Cabo San Lucas, Mexico</h1>
-              <img class="lead img-size" src="images/cabo.jpg">
+              <img class="lead img-size" src="images/cabo.jpg" alt="A photo of Cabo San Lucas">
               <p>
                 <a class="btn btn-primary btn-lg" href="http://www.loscabos-tourism.com/cabo/" target="_blank">Cabo Tourism Site</a>
               </p>
           </div>
           <div class="item btn-center">
             <h1>Daytona Beach, Florida</h1>
-            <img class="lead img-size" src="images/daytona.jpg" alt="A photo of Daytona beach" />
+            <img class="lead img-size" src="images/daytona.jpg" alt="A photo of Daytona beach"/>
             <p>
               <a class="btn btn-primary btn-lg" href="http://www.daytonabeach.com/" target="_blank">Daytona's Tourism Site</a>
             </p>
           </div>
           <div class="item btn-center">
             <h1>Manzanillo, Mexico</h1>
-              <img class="lead img-size" src=images/manzanillo.jpg>
+              <img class="lead img-size" src=images/manzanillo.jpg alt="A photo of Manzanillo, Mexico">
               <p>
                 <a class="btn btn-primary btn-lg" href="http://www.gomanzanillo.com/oldindex.htm" target="_blank">Manzanillo Tourism Site</a>
               </p>
           </div>
           <div class="item btn-center">
             <h1>Miami, Florida</h1>
-              <img class="lead img-size" src="images/miami.jpg">
+              <img class="lead img-size" src="images/miami.jpg" alt="A photo of Miami, Florida">
               <p>
                 <a class="btn btn-primary btn-lg" href="http://www.miamiandbeaches.com/" target="_blank">Miami Tourism Site</a>
               </p>
           </div>
           <div class="item btn-center">
-            <h1>Daytona Beach, Florida</h1>
-            <img class="lead img-size" src="images/daytona.jpg" alt="A photo of Daytona beach" />
+            <h1>Palm Beach, Florida</h1>
+            <img class="lead img-size" src="images/palm.jpg" alt="A photo of Palm beach" />
             <p>
-              <a class="btn btn-primary btn-lg" href="http://www.daytonabeach.com/" target="_blank">Daytona's Tourism Site</a>
+              <a class="btn btn-primary btn-lg" href="http://www.palmbeachfl.com/" target="_blank">Palm Beach Tourism Site</a>
             </p>
           </div>
           <div class="item btn-center">
-            <h1>Bja, Mexico</h1>
-              <img class="lead img-size" src=images/baja.jpg>
+            <h1>Rarotonga, Cook Islands</h1>
+              <img class="lead img-size" src=images/rarotonga.jpg alt="A photo of Rarotonga">
               <p>
-                <a class="btn btn-primary btn-lg" href="http://www.lonelyplanet.com/mexico/baja-california" target="_blank">Baja Tourism Site</a>
+                <a class="btn btn-primary btn-lg" href="http://www.tripadvisor.com/Tourism-g309713-Rarotonga_Southern_Cook_Islands-Vacations.html" target="_blank">Rarotonga Tourism Site</a>
               </p>
           </div>
           <div class="item btn-center">
-            <h1>Cabo San Lucas, Mexico</h1>
-              <img class="lead img-size" src="images/cabo.jpg">
+            <h1>San Diego, California</h1>
+              <img class="lead img-size" src="images/sanDiego.jpg" alt="A photo of San Diego">
               <p>
-                <a class="btn btn-primary btn-lg" href="http://www.loscabos-tourism.com/cabo/" target="_blank">Cabo Tourism Site</a>
+                <a class="btn btn-primary btn-lg" href="http://www.sandiego.org/" target="_blank">San Diego Tourism Site</a>
               </p>
           </div>
           <div class="item btn-center">
-            <h1>Daytona Beach, Florida</h1>
-            <img class="lead img-size" src="images/daytona.jpg" alt="A photo of Daytona beach" />
+            <h1>Tulum, Mexico</h1>
+            <img class="lead img-size" src="images/tulum.jpg" alt="A photo of Tulum, Mexico" />
             <p>
-              <a class="btn btn-primary btn-lg" href="http://www.daytonabeach.com/" target="_blank">Daytona's Tourism Site</a>
+              <a class="btn btn-primary btn-lg" href="http://www.tripadvisor.com/Tourism-g150813-Tulum_Yucatan_Peninsula-Vacations.html" target="_blank">Tulum's Tourism Site</a>
             </p>
           </div>
         </div>
@@ -124,7 +116,6 @@
           <form>
             <h1>Vacation Questionaire</h1>
             <h2>Answer the questions to get a suggestion of where your next vacation should be:</h2>
-            <!-- temp radio -->
             <h3>Would you like to go somewhere warm or tropical?</h3>
             <div class="radio">
               <label>
@@ -138,7 +129,6 @@
                 No
               </label>
             </div>
-            <!-- tourist radio -->
             <h3>Would you like to go somewhere touristy?</h3>
             <div class="radio">
               <label>
@@ -152,7 +142,6 @@
                 No
               </label>
             </div>
-            <!-- affordable radio -->
             <h3>Would you like your vacation to be affordable?</h3>
             <div class="radio">
               <label>
@@ -166,7 +155,6 @@
                 No
               </label>
             </div>
-            <!-- fly radio -->
             <h3>Would you like to fly to your destination?</h3>
             <div class="radio">
               <label>
@@ -180,7 +168,6 @@
                 No
               </label>
             </div>
-            <!-- usa radio -->
             <h3>Would you like to remain in the USA?</h3>
             <div class="radio">
               <label>
@@ -196,63 +183,117 @@
             </div>
             <br>
             <button type="submit" class="btn btn-primary" data-toggle="modal" id="submit" data-target="#myModal">Submit</button>
-            <button class='btn btn-warning' id='resetButton'>Reset</button>
+            <button class='btn btn-danger' id='resetButton'>Reset</button>
           </form>
         </div>
       </div>
     </div>
-        <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="myModalLabel">You should go to:</h4>
+            <h2 class="modal-title" id="myModalLabel">You should go to:</h2>
           </div>
           <div class="modal-body">
             <div class="daytona">
               <h3>Daytona Beach, Florida</h3>
               <img src="images/daytona.jpg" alt="A pic of a Daytona Beach, Florida" />
+              <div class="btn-center">
+                <p>
+                  <a class="btn btn-primary btn-lg" href="http://www.daytonabeach.com/" target="_blank">Daytona's Tourism Site</a>
+                </p>
+              </div>
             </div>
             <div class="cabo">
               <h3>Cabo San Lucas, Mexico</h3>
               <img src="images/cabo.jpg" alt="A pic of a Cabo San Lucas Mexico" />
+              <div class="btn-center">
+                <p>
+                  <a class="btn btn-primary btn-lg" href="http://www.loscabos-tourism.com/cabo/" target="_blank">Cabo Tourism Site</a>
+                </p>
+              </div>
             </div>
             <div class="sanDiego">
               <h3>San Diego, California</h3>
               <img src="images/sanDiego.jpg" alt="A pic of a San Diego" />
+              <div class="btn-center">
+                <p>
+                  <a class="btn btn-primary btn-lg" href="http://www.sandiego.org/" target="_blank">San Diego Tourism Site</a>
+                </p>
+              </div>
             </div>
             <div class="baja">
               <h3>Baja, Mexico</h3>
               <img src="images/baja.jpg" alt="A pic of a Baja Mexico" />
+              <div class="btn-center">
+                <p>
+                  <a class="btn btn-primary btn-lg" href="http://www.lonelyplanet.com/mexico/baja-california" target="_blank">Baja Tourism Site</a>
+                </p>
+              </div>
             </div>
             <div class="miami">
               <h3>Miami, Florida</h3>
               <img src="images/miami.jpg" alt="A pic of a Miami" />
+              <div class="btn-center">
+                <p>
+                  <a class="btn btn-primary btn-lg" href="http://www.miamiandbeaches.com/" target="_blank">Miami Tourism Site</a>
+                </p>
+              </div>
             </div>
             <div class="fiji">
               <h3>Fiji</h3>
               <img src="images/fiji.jpg" alt="A pic of a Fiji" />
+              <div class="btn-center">
+                <p class="btn-group">
+                  <a class="btn btn-primary btn-lg" href="http://www.fiji.travel/" target="_blank">Fiji's Tourism Site</a>
+                </p>
+              </div>
             </div>
             <div class="tulum">
               <h3>Tulum, Mexico</h3>
               <img src="images/tulum.jpg" alt="A pic of a Tulum Mexico" />
+              <div class="btn-center">
+                <p>
+                  <a class="btn btn-primary btn-lg" href="http://www.tripadvisor.com/Tourism-g150813-Tulum_Yucatan_Peninsula-Vacations.html" target="_blank">Tulum's Tourism Site</a>
+                </p>
+              </div>
             </div>
             <div class="manzanillo">
               <h3>Manzanillo, Mexico</h3>
               <img src="images/manzanillo.jpg" alt="A pic of a Manzanillo" />
+              <div class="btn-center">
+                <p>
+                  <a class="btn btn-primary btn-lg" href="http://www.gomanzanillo.com/oldindex.htm" target="_blank">Manzanillo Tourism Site</a>
+                </p>
+              </div>
             </div>
             <div class="rarotonga">
               <h3>Rarotonga, Cook Islands</h3>
               <img src="images/rarotonga.jpg" alt="A pic of a Rarotonga" />
+              <div class="btn-center">
+                <p>
+                  <a class="btn btn-primary btn-lg" href="http://www.tripadvisor.com/Tourism-g309713-Rarotonga_Southern_Cook_Islands-Vacations.html" target="_blank">Rarotonga Tourism Site</a>
+                </p>
+              </div>
             </div>
             <div class="palm">
               <h3>Palm Springs, California</h3>
               <img src="images/palm.jpg" alt="A pic of a Palm Springs" />
+              <div class="btn-center">
+                <p>
+                  <a class="btn btn-primary btn-lg" href="http://www.palmbeachfl.com/" target="_blank">Palm Beach Tourism Site</a>
+                </p>
+              </div>
             </div>
             <div class="crazy">
               <h3>You're crazy, go somewhere tropical!</h3>
               <img src="images/crazy.jpg" alt="A pic of a person surrounded by glaciers" />
+              <div class="btn-center">
+                <p>
+                  <a class="btn btn-primary btn-lg" href="http://www.daytonabeach.com/" target="_blank">Daytona's Tourism Site</a>
+                </p>
+              </div>
             </div>
           </div>
           <div class="modal-footer">
@@ -261,8 +302,9 @@
         </div>
       </div>
     </div>
-    <footer class="bottom">
-      <p>&copy; Daren Schaad/Epicodus all rights reserved</p>
+    <hr>
+    <footer>
+      <p>&copy;2016 Daren Schaad/Epicodus all rights reserved</p>
       <p>Contact information: darenschaad@gmail.com</p>
     </footer>
     <script src="js/bootstrap.min.js"></script>
