add mental health link for a non tropical vacation

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
               <img src="images/crazy.jpg" alt="A pic of a person surrounded by glaciers" />
               <div class="btn-center">
                 <p>
-                  <a class="btn btn-primary btn-lg" href="http://www.daytonabeach.com/" target="_blank">Daytona's Tourism Site</a>
+                  <a class="btn btn-primary btn-lg" href="http://psychologytoday.tests.psychtests.com/take_test.php?idRegTest=3885" target="_blank">Mental Health Evaluation Site</a>
                 </p>
               </div>
             </div>
